creating js function for dealing cards

--- a/index.html
+++ b/index.html
@@ -17,27 +17,26 @@
 			</section>
 			 -->
 			<section id="dealer-hand">
-				<div id="dealer-current-card" class="card">&hearts;</div>
-				<div id="dealer-current-card" class="face-down-card"></div>
+<!-- 				<div id="dealer-current-card" class="card">&hearts;</div>
+				<div id="dealer-current-card" class="face-down-card"></div> -->
 			</section>
 
 			<section id="player-hand">
-				<div id="player-current-card" class="card">&spades;</div>
-			</section>
+<!-- 				<div id="player-current-card" class="card">&spades;</div>
+ -->			</section>
 
 			<section id="message-center">
 				<h2>Message Center</h2>
 				<p>Bank Roll
 					<div id="current-bankroll" class="dynamic-numbers">
-						$500
 					</div>
 
 				</p>
 				<div id="place-bet-buttons">
-					<button class="bet">Bet $5</button>
-					<button class="bet"> Bet $10</button>
-					<button class="bet"> Bet $20</button>
-					<button class="bet"> Bet $50</button>
+					<button id="bet5" class="bet">$5</button>
+					<button id="bet10" class="bet"> Bet $10</button>
+					<button id="bet20" class="bet"> Bet $20</button>
+					<button id="bet50" class="bet"> Bet $50</button>
 				</div>
 				<p>Current Bet
 					<div id="current-bet" class="dynamic-numbers"></div>
@@ -47,7 +46,7 @@
 					<div id="alert-center">
 					</div>
 				</div>
-<div id="game-counter">Game Count<span>ex: 4/5 wins</span></div>
+<div id="game-counter">Game Count<span>4/5 wins</span></div>
 
 			</section>
 
