--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div id="alert-center">
 					</div>
 				</div>
-<div id="game-counter">Game Count<span>4/5 wins</span></div>
+<div id="game-counter">Game Count<span id="count"></span></div>
 
 			</section>
 
