fixing minor html issues

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 					<div id="alert-center">
 					</div>
 				</div>
-<div id="game-counter">Game Count<span id="count"></span></div>
+				<div id="game-counter">Game Count<br/>
+					<span id="count"></span>
+				</div>
 
 			</section>
 
