removing placeholder html that was commented out

--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
 			</section>
 			 -->
 			<section id="dealer-hand">
-<!-- 				<div id="dealer-current-card" class="card">&hearts;</div>
-				<div id="dealer-current-card" class="face-down-card"></div> -->
 			</section>
 
 			<section id="player-hand">
-<!-- 				<div id="player-current-card" class="card">&spades;</div>
- -->			</section>
+ 			</section>
 
 			<section id="message-center">
 				<h2>Message Center</h2>
@@ -71,7 +68,6 @@
 				<div id="deal-cards" class="action">Deal</div>
 				<div id="hit-me"  class="action">Hit Me</div>
 				<div id="stand"  class="action">Stand</div>
-				<!-- <div id="raise">Raise Bet</div>  This will be in the message center and use the place bet buttons-->
 			</footer>
 </div>	
 </body>
