adding section to index for overlay box on empty deck

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 				</div>
 
 			</section>
+			<div id="placeholder">
+				<!-- <div id="restart"></div> -->
+			</div>
+			
 
 		<div id="bottom">
 			<footer>
