--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Blackjack</title>
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,500,700' rel='stylesheet' type='text/css'>
